Add equipment and researchers collections, unit tests
